issue ECOSCOM-319 - Need to align verticals of the block "Available" value with other values

--- a/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
+++ b/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
@@ -1283,7 +1283,7 @@
 .invariants-form.view-form .template-table .template-free-content {
   font-family: Open Sans Bold, Arial, sans-serif;
   float: right;
-  width: 55%;
+  width: 54.5%;
 }
 
 .invariants-form .template-table .template-view span.value-item .value-item-actions {
